use date module

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openmusic-sample-player": "^1.4.3",
     "browserify": "^10.2.1",
     "load-sample-2-buff": "^1.0.1",
+    "full-house": "^1.0.0",
     "watchify": "^3.2.1"
   }
 }
